--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 attrs==21.2.0
 autopep8==1.5.7
 crispy-bootstrap5==0.5
+Cython==0.29.24
 dj-database-url==0.5.0
 Django==3.2.7
 django-crispy-forms==1.12.0
@@ -25,5 +26,6 @@ scipy==1.7.1
 six==1.16.0
 smart-open==5.2.1
 sqlparse==0.4.1
+tesseract-ocr==0.0.1
 toml==0.10.2
 whitenoise==5.3.0
