--- a/requirements.txt
+++ b/requirements.txt
@@ -20,10 +20,12 @@ py==1.10.0
 pycodestyle==2.7.0
 pyparsing==2.4.7
 pytesseract==0.3.8
+pytest==6.2.5
 pytz==2021.1
 scipy==1.7.1
 six==1.16.0
 smart-open==5.2.1
 sqlparse==0.4.1
+tesseract-ocr==0.0.1
 toml==0.10.2
 whitenoise==5.3.0
