--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,6 @@ scipy==1.7.1
 six==1.16.0
 smart-open==5.2.1
 sqlparse==0.4.1
-tesseract-ocr==0.0.1
+# tesseract-ocr==0.0.1
 toml==0.10.2
 whitenoise==5.3.0
